Adjusted naviagtion seperator-lines. Smaller width and color red for carousel-title. Fixed wrong color in person-detail.

--- a/src/sass/_elements.scss
+++ b/src/sass/_elements.scss
@@ -173,7 +173,8 @@
     text-align: center;
     border-radius: 8px;
     background-color: $dark_gray;
-    color: $light_gray;
-    padding: 0.5em 0;
+    color: $red;
+    padding: 0.5em 10px;
+    margin: 0 20%;
   }
 }
