--- a/src/sass/_styles.scss
+++ b/src/sass/_styles.scss
@@ -409,10 +409,12 @@ a
 
                     &:after
                     {
-                        content: "|";
-                        color: $red;
+                        content: "";
+                        border-right: 1px solid $red;
                         position: absolute;
                         right: 0;
+                        width: 1px;
+                        height: 1.4em;
                         
                         @include bp(767px)
                         {
@@ -427,7 +429,7 @@ a
                     {
                         &:after
                         {
-                            content: "";
+                            display: none;
                         }    
                     }    
                 }
@@ -1088,7 +1090,7 @@ a
             }
         }
 
-        p
+        p, ul
         {
             color: $light_gray;
 
